--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "funlib.geometry>=0.3.0",
     "funlib.learn.torch @ git+https://github.com/funkelab/funlib.learn.torch.git",
     "funlib.persistence >= 0.5.2",
+    "gdown",
     "gunpowder>=1.4.0",
     "lsds",
     "mwatershed>=0.5.0",
