--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["setuptools", "wheel"]
 [project]
 name = "prism_training"
 version = "0.0.1"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 
 dependencies = [
     "black",
@@ -12,7 +12,7 @@ dependencies = [
     "click",
     "edt",
     "funlib.geometry>=0.3.0",
-    "funlib.learn.torch @ git+https://github.com/funkelab/funlib.learn.torch.git",
+    # "funlib.learn.torch @ git+https://github.com/funkelab/funlib.learn.torch.git",
     "funlib.persistence >= 0.5.2",
     "gdown",
     "gunpowder>=1.4.0",
@@ -20,23 +20,31 @@ dependencies = [
     "mwatershed>=0.5.0",
     "neuroglancer",
     "numba>=0.60",
-    "numpy==1.26.0",
-    "pydantic==2.6.3",
+    # "numpy>=2.0.0",
+    # "pydantic==2.6.3",
     "scikit-learn>=1.5.2",
     "tensorboardX",
     "torch>=2.1.1",
+    "torchvision",
     "tqdm",
     "wandb",
     "zarr",
+    "matplotlib>=3.10.6",
+    "dacapo-toolbox>=1.0.0",
+    "tems>=1.0.4",
+    "funlib-learn-torch",
 ]
 
 [project.optional-dependencies]
-pred = ["volara"]
+pred = [
+    "volara>=1.0.2",
+    "volara-torch>=1.0.1",
+]
 vis = ["funlib.show.neuroglancer"]
 
 [tool.uv.sources]
-"funlib.learn.torch" = { git = "https://github.com/funkelab/funlib.learn.torch"}
-gunpowder = { git = "https://github.com/funkelab/gunpowder", branch = "neuroglancer" }
+"lsds" = { git = "https://github.com/pattonw/lsd" }
+funlib-learn-torch = { git = "https://github.com/funkelab/funlib.learn.torch" }
 
 [tool.setuptools.packages.find]
 where = ["."]
